# lapet

./: .gitignore  Evaluation_Results.ipynb  README.md  data.csv  data_output.csv  eval_data.csv  eval_llama2_3.py  eval_results.csv  evaluate.py  generate.py  pairwise.py  pyproject.toml  requirements.txt  test_dataloader.py
lapet/: __init__.py  gemma.py  handler.py  litellm.py  llama.py  phi.py
llm_eval/: __init__.py  handler.py  judge.py  llama.py
