[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval"
authors = [
    {name = "Jonathan Eisenzopf", email = "jonathan.eisenzopf@talkmap.com"},
]
description = "Library that makes it easier to evaluate the quality of LLM outputs"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["llm"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "numpy",
    "torch>=2.3.0",
    "huggingface_hub>=0.23.0",
    "transformers==4.40.0",
    "auto-gptq",
    "autoawq",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "my_package.VERSION"}
readme = {file = ["README.md"]}