[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval"
version = "0.4.5"
authors = [
    {name = "Jonathan Eisenzopf", email = "jonathan.eisenzopf@talkmap.com"},
]
description = "Library that makes it easier to evaluate the quality of LLM outputs"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["llm"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "numpy",
    "torch>=2.3.0",
    "huggingface_hub>=0.23.0",
    "transformers==4.40.2",
    "auto-gptq",
    "autoawq",
    "openai",
    'importlib-metadata; python_version<"3.10"',
]